[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zorank"
version = "0.1.0"
description = "Kernel d’orchestration mimétique ZoranK (UCB1, ΔM11.3, mémoire fractale, quorum, K-Index)."
authors = [{name="Institut IA", email="contact@institutia.example"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
